# MyFrame

./: .gitignore  CMakeLists.txt  COMPILATION_ISSUES_FINAL.md  README.md
.github/workflows/: test.yml
build_asan/include/: app_handler_v2.h  base_net_thread.h  client_iface.h  codec.h  common_epoll.h  common_exception.h  custom_stream_process.h  hpack.h  http2_client_process.h  http2_process.h  http_client_data_process.h  http_req_process.h  listen_connect.h  out_connect.h  protocol_context.h  protocol_detector.h  protocol_probes.h  ssl_context.h  string_pool.h  tls_entry_process.h
build_asan/include/protocol_adapters/: http_application_adapter.h  http_context_adapter.h  ws_application_adapter.h
build_test/examples/: async_http_demo  biz_http_client  client_conn_factory_example  demo_multi_protocol_server  demo_multi_thread_server  h2_client  h2_server  http2_out_client  http_close_demo  http_out_client  http_server  http_server_close_demo  https_server  level1_multi_protocol  level2_multi_protocol  level3_custom_echo  level3_multi_protocol  router_biz_client  router_client  simple_async_test  test_edge_cases  test_memory_management  thread_user_data_demo  tls_multi_fetch  unified_async_demo  unified_https_wss_server  unified_level2_demo  unified_mixed_server  unified_simple_http  unified_ws_client_test  ws_bench_client  ws_broadcast_periodic  ws_broadcast_user  ws_stickbridge_client  wss_server  xproto_client  xproto_server
build_test/include/: app_handler_v2.h  app_http_data_process.h  app_ws_data_process.h  base_connect.h  base_data_process.h  base_def.h  base_net_obj.h  base_net_thread.h  base_thread.h  common_def.h  http_base_process.h  md5_utils.h  protocol_detect_process.h  ssl_context.h  tls_entry_process.h  tls_out_connect.h  tls_unified_entry_process.h  web_socket_data_process.h  web_socket_msg.h
build_test/include/protocol_adapters/: binary_application_adapter.h  binary_context_adapter.h
build_test/test/: multi_protocol_server  test_business_handler  test_unit
core/: app_handler.h  app_handler_v2.cpp  app_handler_v2.h  app_http_data_process.h  app_ws_data_process.h  base_connect.h  base_data_process.cpp  base_data_process.h  base_def.h  base_net_obj.cpp  base_net_obj.h  base_net_thread.cpp  base_net_thread.h  base_reload.h  base_singleton.h  base_thread.cpp  base_timer.cpp  channel_data_process.cpp  channel_data_process.h  client_conn_router.cpp  client_conn_router.h  client_conn_router2.cpp  client_iface.h  client_ssl_codec.h  codec.h  common_def.cpp  common_epoll.cpp  common_epoll.h  common_obj_container.cpp  common_obj_container.h  common_util.h  connection_manager.cpp  connection_manager.h  custom_stream_process.h  factory_base.h  hpack.cpp  http1_client.cpp  http2_client.cpp  http2_client_alpn.cpp  http2_client_process.cpp  (+53 more)
core/protocol_adapters/: binary_application_adapter.cpp  binary_application_adapter.h  binary_context_adapter.cpp  binary_context_adapter.h  http_application_adapter.cpp  http_application_adapter.h  http_context_adapter.cpp  http_context_adapter.h  ws_application_adapter.cpp  ws_context_adapter.cpp  ws_context_adapter.cpp.disabled  ws_context_adapter.h
docs/: AGENTS.md  ASYNC_AND_TIMER_COMPLETE.md  ASYNC_FEATURES_SUMMARY.md  ASYNC_RESPONSE_GUIDE.md  ASYNC_TIMER_QUICK_REF.md  CONNECTION_LIFECYCLE_CN.md  CONTRIBUTING.md  CRITICAL_BUGS_AND_FIXES.md  CURL_TESTING_GUIDE.md  FRAMEWORK_FEATURES_CN.md  FRAMEWORK_FEATURES_EN.md  MULTI_THREAD_SERVER_GUIDE.md  PERF_TESTING_CN.md  README_ENHANCED.md  TESTING_PLAN_CN.md  THREAD_ACCESS_GUIDE.md  TIMER_USAGE_GUIDE.md  TLS_SETUP.md  UNIFIED_PROTOCOL_COMPLETE.md  UNIFIED_PROTOCOL_DESIGN.md  UNIFIED_PROTOCOL_ROADMAP.md  UNIFIED_PROTOCOL_STATUS.md  USAGE_GUIDE_CN.md  perf.md  upgrade_to_multi_protocol.md
docs/examples/: EXAMPLES_CLEANUP_REPORT.md  README.md  README_ASYNC_HTTP.md  README_EXAMPLES_INDEX.md  README_NEW_EXAMPLES.md  README_PROTOCOL_LEVELS.md  README_STOCK_SYSTEM.md
docs/root/: IMPLEMENTATION_SUMMARY_CN.md  TEST_FINDINGS_SUMMARY.md  URGENT_FIX_PLAN.md
docs/scripts/: test_multi_thread_server.sh
docs/test/: FINAL_HTTPS_DIAGNOSIS.md  HTTPS_VALIDATION_REPORT.md  README_TESTING.md
examples/: CMakeLists.txt  README.md  TEST_ALL_EXAMPLES.sh  async_http_server_demo.cpp  biz_http_client.cpp  client_conn_factory_example.cpp  framework_ws_client.cpp  framework_ws_client_idle.cpp  framework_ws_server.cpp  http2_out_client.cpp  http_close_demo.cpp  http_out_client.cpp  http_server_close_demo.cpp  level1_multi_protocol.cpp  level2_multi_protocol.cpp  level3_custom_echo.cpp  level3_multi_protocol.cpp  multi_thread_server.cpp  router_biz_client.cpp  router_client.cpp  simple_async_test.cpp  simple_h2_client.cpp  simple_h2_server.cpp  simple_http_client.cpp  simple_http_server.cpp  simple_https_client.cpp  simple_https_server.cpp  simple_ws_client.cpp  simple_wss_server.cpp  stock_system_demo.sh  test_edge_cases.cpp  test_memory_management.cpp  thread_user_data_demo.cpp  tls_multi_fetch.cpp  unified_async_demo.cpp  unified_https_wss_server.cpp  unified_level2_demo.cpp  unified_mixed_server.cpp  unified_simple_http.cpp  unified_ws_client_test.cpp  (+5 more)
include/: app_handler_v2.h  factory_base.h  multi_protocol_factory.h  server.h
include/core/: base_connect.h  base_net_thread.h  codec.h  listen_connect.h  listen_factory.h  listen_process.h  out_connect.h  protocol_detect_process.h  protocol_probes.h  ssl_context.h
scripts/: build.sh  build_cmake.sh  perf_preset.sh  update_myframe_vendor.sh
scripts/perf/: run_http_bench.sh  run_ws_bench.sh
src/: mf_app_handler.cpp  mf_app_handler.h
test/: CMakeLists.txt  Makefile_https_validation  Makefile_standalone  README_HTTPS_VALIDATION.md  multi_protocol_server.cpp  run_https_validation_tests.sh  run_integration_test.sh  run_tests.sh  single_thread_server.cpp  stress_test_queue.cpp  verify_queue_logic.cpp
utils/: CMakeLists.txt
utils/btree/: CMakeLists.txt
utils/encode/: CMakeLists.txt  build.sh  core.mk
utils/ini/: ini_config.h
utils/str2sign/: CMakeLists.txt  build.sh  core.mk
